# duckdb

./: CMakeLists.txt  README.md
.github/workflows/: Regression.yml
benchmark/: benchmark_runner.cpp  interpreted_benchmark.cpp
benchmark/include/: interpreted_benchmark.hpp
benchmark/micro/: append.cpp  attach.cpp  bulkupdate.cpp
benchmark/tpch/: startup.cpp
extension/: extension_config.cmake
extension/autocomplete/: autocomplete_extension.cpp
extension/excel/: excel_extension.cpp
extension/fts/: fts_extension.cpp  fts_indexing.cpp
extension/httpfs/: crypto.cpp  httpfs.cpp  httpfs_extension.cpp  s3fs.cpp
extension/icu/: icu-timezone.cpp  icu_extension.cpp
extension/inet/: inet_extension.cpp  inet_functions.cpp  ipaddress.cpp
extension/jemalloc/: jemalloc_extension.cpp
extension/json/: json_extension.cpp  json_multi_file_info.cpp
extension/mimalloc/: CMakeLists.txt  mimalloc_extension.cpp
extension/mimalloc/include/: mimalloc_extension.hpp
extension/mimalloc/mimalloc/: CMakeLists.txt
extension/parquet/: column_reader.cpp  parquet_extension.cpp  parquet_metadata.cpp  parquet_statistics.cpp
extension/sqlsmith/: sqlsmith_extension.cpp  statement_generator.cpp
extension/tpcds/: tpcds_extension.cpp
extension/tpch/: tpch_extension.cpp
extension/visualizer/: visualizer_extension.cpp
scripts/: amalgamation.py  format.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt  allocator.cpp  box_renderer.cpp  container_allocator.cpp  enum_util.cpp  exception.cpp  exception_format_value.cpp  extra_type_info.cpp  filename_pattern.cpp  local_file_system.cpp  memory_safety_exceptions.cpp  page_allocator.cpp  preserved_error.cpp  radix.cpp  re2_regex.cpp  string.cpp  string_util.cpp  to_string.cpp  tree_renderer.cpp  virtual_file_system.cpp
src/execution/: join_hashtable.cpp  physical_plan_generator.cpp
src/function/: cast_rules.cpp  macro_function.cpp
src/main/: client_context.cpp  config.cpp  database.cpp  error_manager.cpp  prepared_statement.cpp  query_profiler.cpp  query_result.cpp  relation.cpp
src/optimizer/: CMakeLists.txt  compressed_materialization.cpp  join_filter_pushdown_optimizer.cpp  join_order_optimizer.cpp  optimizer.cpp  partitioned_execution.cpp
src/parallel/: event.cpp  task_scheduler.cpp
src/parser/: query_error_context.cpp
src/planner/: bind_context.cpp  binder.cpp  logical_operator.cpp  planner.cpp  (+1 more)
(+295 files in other folders)
